<resources>
    <string name="app_name">Zeon</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="main_news">Main News</string>
    <string name="division">Divisions</string>
    <string name="projects">Projects</string>
    <string name="future_vision">Future vision</string>
    <string name="about_us">About us</string>
    <string name="DetailsDivision">Division Details </string>
    <string name="contact_us">Contact us</string>
    <string name="DetailsProject">Project Details</string>
    <string name="contact_us_your_name">Your name</string>
    <string name="contact_us_your_Email">Your email</string>
    <string name="contact_us_your_email">like : mahmoudtrro@example.com </string>
    <string name="contact_us_subject">Subject</string>
    <string name="more">More</string>
    <string name="team_Info">We love each other very much</string>
    <string name="Condition_for_foundation">we met in Damascus University </string>
    <string name="contact_us_email"> mahmoudtrro@gmail.com</string>
    <string name="ReasonForContact"> Reason for contact</string>
    <string name="your_message_feedback">Your message </string>
    <string name="feedback_response">Would you like an email response</string>
    <string name="feedback_Button">Send Feedback</string>
    <string name="Greeting_client"> Welcome to Zeon Website ^__^ </string>

    <!-- Error message when there is no internet connectivity [CHAR LIMIT=NONE] -->
    <string name="no_internet_connection">No internet connection , Please check it .</string>

    <!-- Text to display in the list when there are no Division [CHAR LIMIT=NONE] -->
    <string name="no_Division_Members">No Division Members found.</string>

    <!-- Text to display in the list when there are no Projects [CHAR LIMIT=NONE] -->
    <string name="no_Project">No Projects found.</string>

    <!-- Text to display in the list when there are Error in fetching  Division's data [CHAR LIMIT=NONE] -->
    <string name="Error_Fetch_Data">Sorry we get an error , Try again .</string>


    <!--Other string resources also defined  … -->
    <string name="feed_back_type1">Financial Aid</string>
    <string name="feed_back_type2">Suggestion</string>
    <string name="feed_back_type3">Praise</string>
    <string name="feed_back_type4">Bug</string>
    <string name="feed_back_type5">Other</string>
    <string name="feed_back_body_detail">Feedback Details...</string>
    <string name="facebook_account">Facebook Account</string>
    <string name="phone_number">Phone Number</string>
    <string name="department">Department</string>
    <string name="skills">Skills</string>
    <string name="brief">Brief</string>
    <string name="member_projects">Projects</string>


    <!--  ...................................  -->

    <string name="supporting">Greyhound divisively hello coldly wonderfully marginally far upon excluding.</string>
    <string name="title">Title</string>
    <string name="subhead">Subhead</string>
    <string name="primary">Title goes here</string>
    <string name="primary_short">Title here</string>
    <string name="subtext">Subtitle here</string>
    <string name="SEE_MORE">SEE MORE </string>
    <string name="GO_TO_WEB">GO TO WEB</string>
    <string name="expanded_supporting">I\'m a thing. But, like most politicians, he promised more than he could deliver. You won\'t have time for sleeping, soldier, not with all the bed making you\'ll be doing. Then we\'ll go with that data file! Hey, you add a one and two zeros to that or we walk! You\'re going to do his laundry? I\'ve got to find a way to escape.</string>

</resources>
